# cprimer

./: .project  CMakeLists.txt  README.md  a.out  folderstruct.txt  main  main.cpp  sectionBusywork.txt
.kdev4/: cprimer.kdev4
chap1/: .swp  1-1.cc.out  1-4.cc  E1-5.cc.out  a.out  counter.cpp  counter.cpp.out
chap1/E1-5_1/: E1-5_1.cc.out  E1-5_1.cpp  Sales_item.h.gch  outfile
chap1/Esec1-5_2/: E.cpp  note.txt  outfile
chap1/sec1-4/: 1-4.cc.out  1-4_3.cc.out  1-4_3.cpp  1-4_3.cpp.out  E1-10.cc.out  E1-3.cc.out  README.md
chap2/2.1 primitive built-in types/: built-in.cpp.out  literals.cpp  test.cpp  typeconversions.cpp
chap2/p2_1/: .test.cpp.swp  literals.cpp.out  test.cpp  test.cpp.out  typeconversions.cpp.out
chap2/p2_2/: initializationDefaults.cpp  initializationDefaults.cpp.out
chapter 1 - getting started/: bettercount.cpp
chapter 1 - getting started/E1-5_1/: a.out  infile
chapter 1 - getting started/Esec1-5_2/: a.out
chapter 2 variables and basic types/2.1 primitive built-in types/: built-in.cpp  test.cpp.out
chapter 2 variables and basic types/2.2 variables/: initializationDefaults.cpp.out
chapter 2 variables and basic types/2.4 const qualifier/: const.cpp  const.cpp.out  const_ref.cpp  const_ref.cpp.out
chapter 2 variables and basic types/2.5.0 dealing with types/: typealias.cpp.out
chapter 3 - strings, vectors, and arrays/3.3 library vector type/: weeee.cpp
nvim/: .netrwhist  init.vim
project ideas/jsonParser/: README.md
skipped sections/: explanation.md  sectionBusywork.txt
testing stuff/1/: 1.cpp  1.cpp.out
(+130 files in other folders)
