cmake_minimum_required(VERSION 2.6)

add_executable(
        main
        main.cpp
        #"chapter 2 variables and basic types/2.6 defining our own data structures/2.6.2 using the sales_data class/sales_data.h"
)

add_library(esec3-2_2.cpp "chapter 3 - strings, vectors, and arrays/3.2 library string type/3.2.2 operations on strings/Esec3-2_2/Esec3-2_2.cpp")
